<resources>
    <string name="app_name">VFrames</string>
    <string name="version_format">Version: %1$s</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_email_address" translatable="false">vframesapp@gmail.com</string>
    <string name="feedback_email_subject">VFrames Feedback</string>
    <string name="can_compare_message">You can take advantage of features involving multiple characters by long-pressing on one character, then selecting another character!</string>
    <string name="can_compare_title">Compare two characters!</string>
    <string name="rating_request_message">Your feedback helps us improve VFrames. Let us know what you think on the Google Play Store! \n\nYou won\'t see this message again.</string>
    <string name="rating_request_title">We want your feedback!</string>
    <string name="rating_request_positive_button">Give Feedback</string>
    <string name="rating_request_negative_button">No Thanks</string>
    <string name="vtrigger_toggle_title">Activate V-Trigger</string>
    <string name="moves_list_title">Move List</string>
    <string name="frame_data_title">Frame Data</string>
    <string name="bnb_page_title">BnB Combos</string>
    <string name="recommended_videos_title">Recommended Videos</string>
    <string name="notes_title">Notes</string>
    <string name="quick_navigate">Quick Nav:</string>
    <string name="frame_data_not_available">Detailed frame data for this character will become available soon. Thank you for your patience.</string>
    <string name="try_getting_new_data">Try the refresh button on the character select screen to see if we have added this data!</string>
    <string name="moves_not_available">The move list for this character will become available soon. Thank you for your patience.</string>
    <string name="notes_coming_soon">Notes (and much more) is on the way to VFrames! Sorry for the wait, and thank you for your patience!</string>
    <string name="bnbs_not_available">Bread and butter combos are on the way for %1$s!</string>
    <string name="ryu_name">Ryu</string>
    <string name="chun_name">Chun-Li</string>
    <string name="cammy_name">Cammy</string>
    <string name="birdie_name">Birdie</string>
    <string name="dictator_name">M. Bison</string>
    <string name="nash_name">Nash</string>
    <string name="mika_name">R. Mika</string>
    <string name="necalli_name">Necalli</string>
    <string name="claw_name">Vega</string>
    <string name="rashid_name">Rashid</string>
    <string name="karin_name">Karin</string>
    <string name="ken_name">Ken</string>
    <string name="laura_name">Laura</string>
    <string name="zangief_name">Zangief</string>
    <string name="dhalsim_name">Dhalsim</string>
    <string name="fang_name">F.A.N.G</string>
    <string name="normals_header">Normal Attacks</string>
    <string name="throws_header">Throws</string>
    <string name="unique_attacks_header">Unique Attacks</string>
    <string name="specials_header">Special Moves</string>
    <string name="critical_arts_header">Critical Arts</string>
    <string name="vskill_header">V-Skill</string>
    <string name="vtrigger_header">V-Trigger</string>
    <string name="vreversal_header">V-Reversal</string>
    <string name="close_to_opponent">(Close To Opponent)</string>
    <string name="can_be_done_in_air">Can be done in air</string>
    <string name="during_jump">(During Jump)</string>
    <string name="during_forward_jump">(During Forward Jump)</string>
    <string name="during_vertical_or_forward_jump">(During Vertical or Forward Jump)</string>
    <string name="during_guard">(During Guard)</string>
    <string name="hold_buttons_to_attack">Hold Buttons to Attack</string>
    <string name="close_to_grounded_opponent">(Close to Grounded Opponent)</string>
    <string name="close_to_airborne_opponent">(Close to Airborne Opponent)</string>
    <string name="no_input">No Input</string>
    <string name="or">Or</string>
    <string name="hold_button">Hold Button</string>
    <string name="during_jump_near_wall">(During Jump Near Wall)</string>
    <string name="during_vtrigger">(During VTrigger)</string>
    <string name="hold_and_release">Hold And Release</string>
    <string name="close_to_crouching_opponent">(Close to Crouching Opponent)</string>
    <string name="during_run">(During Run)</string>
    <string name="hits_overhead">Hits overhead.</string>
    <string name="hits_low">Hits low.</string>
    <string name="command_grab">Command grab.</string>
    <string name="ryu_hadoken_description">Punch strength determines projectile speed.</string>
    <string name="ryu_shoryuken_description">Startup invincibility on MP and EX versions.</string>
    <string name="ryu_tatsu_description">Has projectile invincibility after startup.</string>
    <string name="ryu_vtrigger_description">Powers up specials and gains ability to charge fireballs. Fully charged fireballs are unblockable.</string>
    <string name="ryu_vskill_description">Parries an attack and builds some V-meter.</string>
    <string name="karin_tenko_posttext">Press Punch immediately to perform enhanced version.</string>
    <string name="karin_meioken_posttext">Hold buttons to change properties.</string>
    <string name="karin_kanzuki_ryu_hokojutsu_sappo_description">Kick strength determines dash length.</string>
    <string name="karin_tenko_description">Enhanced version has faster startup and recovery, more damage, and higher launch height.</string>
    <string name="karin_orochi_description">EX version crumples opponent.</string>
    <string name="karin_senha_resshu_description">Command grab that misses on crouching opponents.</string>
    <string name="karin_vskill_description">Destroys projectiles with a palm strike.</string>
    <string name="karin_vtrigger_description">Karin gains access to Guren Ken, a new special move with a number of followups.</string>
    <string name="karin_mujinkyaku_description">LK version: safe on block.\nMK version: does an overhead.\nHK version: frame traps.</string>
    <string name="claw_claw_off_only">(Claw Off Only)</string>
    <string name="claw_claw_on_only">(Claw On Only)</string>
    <string name="claw_switch">Switch to Claw On/Off</string>
    <string name="claw_flying_barcelona_attack_description">EX version launches opponent airborne on the way up.</string>
    <string name="claw_vskill_description">Has upper-body invincibility.</string>
    <string name="claw_vtrigger_torero_description">Throws a rose straight forward. On hit or block, performs a follow-up attack.</string>
    <string name="claw_vtrigger_rojo_description">Throws a rose at an upward angle. On hit or block, performs a follow-up attack.</string>
    <string name="claw_vtrigger_azul_description">Throws a rose at a downward angle. On hit or block, performs a follow-up attack.</string>
    <string name="claw_during_flying_barcelona_attack">(During Flying Barcelona Attack)</string>
    <string name="chun_up_to_three_times">Up to 3 times</string>
    <string name="chun_vtrigger_description">Adds additional hits to most normals, which extends blockstun and hitstun and introduces new combo possibilities.</string>
    <string name="chun_vskill_description">A diagonal jump which launches opponents on hit.</string>
    <string name="chun_senenshu_description">Hits overhead. Leads to combo in V-Trigger.</string>
    <string name="chun_kikoken_description">Punch strength determines speed and distance.</string>
    <string name="chun_airborne_lightning_legs_description">Changes momentum in air.</string>
    <string name="chun_spinning_bird_kick_description">EX version has startup invincibility.</string>
    <string name="chun_critical_art_description">Projectile invincible.</string>
    <string name="ken_hadoken_description">Punch strength determines projectile speed.</string>
    <string name="ken_shoryuken_description">Startup invincibility.</string>
    <string name="ken_tatsu_description">LK version launches opponent. HK and EX versions rise off the ground.</string>
    <string name="ken_airborne_tatsu_description">EX version attacks diagonally downward.</string>
    <string name="ken_vtrigger_description">Moves Ken forward, maintaining pressure or extending a combo. Afterward, Ken\'s special moves are faster and gain better hitboxes.</string>
    <string name="ken_vskill_description">Moves Ken forward. Holding the buttons performs a step kick.</string>
    <string name="ken_thunder_kick_posttext">Tap to feint, hold to attack.</string>
    <string name="zangief_hold_buttons_for_special_lariat">Hold Buttons to Perform Special Lariat</string>
    <string name="zangief_can_move_forward_while_holding_buttons">Can move forward while holding buttons.</string>
    <string name="zangief_siberian_express_description">EX version is armored.</string>
    <string name="zangief_vtrigger_description">Vacuums opponent toward Zangief. By holding the buttons, Zangief will continue attacking and the lariat will gain hitboxes. V-Skill gains infinite armor.</string>
    <string name="zangief_vskill_description">Zangief gains one hit of armor (infinite hits in V-Trigger). Zangief attacks when the buttons are released.</string>
    <string name="dictator_psycho_reflect_hold_buttons">Hold buttons to throw back a projectile</string>
    <string name="dictator_after_head_press">(After Head Press Hits)</string>
    <string name="dictator_before_head_press">(Before Head Press Hits)</string>
    <string name="dictator_psycho_blast_description">EX version launches a projectile.</string>
    <string name="dictator_devil_reverse_description">Crosses up while in V-Trigger</string>
    <string name="dictator_vskill_description">Press buttons to absorb a projectile. Hold buttons to throw a projectile back.</string>
    <string name="dictator_vtrigger_description">Special moves become cancellable into EX moves. Various special move properties change. Dashes gain ability to cross up.</string>
    <string name="birdie_hanging_chain_posttext">Chain Twirl: Hold Kick\nCancel: Press Punch</string>
    <string name="birdie_bull_head_description">EX version gains armor.</string>
    <string name="birdie_bull_horn_description">Has projectile invincibility. EX version gains armor.</string>
    <string name="birdie_hanging_chain_description">Chain goes through projectiles.\nLK version: opponent lands close.\nMK version: opponent lands far.\nHK version anti-airs.</string>
    <string name="birdie_killing_head_description">Punch strength determines number of hits.</string>
    <string name="birdie_bull_revenger_description">Has projectile invincibility.</string>
    <string name="birdie_vtrigger_description">Birdie deals more damage. Special moves become faster, multi-hitting, or gain armor.</string>
    <string name="mika_shooting_peach_description">EX version has one hit of armor.</string>
    <string name="mika_wingless_airplane_description">EX version has invincibility.</string>
    <string name="mika_typhoon_description">Leaves Mika behind the opponent.</string>
    <string name="mika_brimstone_description">Leaves Mika in front of the opponent.</string>
    <string name="mika_vtrigger_posttext">Hold buttons to delay Nadeshiko</string>
    <string name="mika_vskill_posttext">Hold buttons to extend speech</string>
    <string name="mika_vskill_description">Mika delivers a speech, ending with a mic spike which has a projectile hitbox. The speech powers up command throws more the longer it goes on.</string>
    <string name="mika_passion_rope_throw_pretext">(After Passion Press)</string>
    <string name="mika_passion_rope_throw_posttext">Input direction determines throw direction</string>
    <string name="rashid_repeat_buttons_to_extend">Repeat button presses to extend</string>
</resources>