<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/GridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="@integer/num_character_card_columns">

            <android.support.v7.widget.CardView
                android:id="@+id/ryu_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/ryu_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/ryu_name"
                        android:background="@color/ryu_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/chun_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/chun_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/chun_name"
                        android:background="@color/chun_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cammy_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/cammy_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/cammy_name"
                        android:background="@color/cammy_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ken_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/ken_card" />

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/ken_name"
                        android:background="@color/ken_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dictator_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/dictator_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/dictator_name"
                        android:background="@color/dictator_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/nash_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/nash_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/nash_name"
                        android:background="@color/nash_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mika_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/mika_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/mika_name"
                        android:background="@color/mika_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/necalli_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/necalli_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/necalli_name"
                        android:background="@color/necalli_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/claw_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/claw_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/claw_name"
                        android:background="@color/claw_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/rashid_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/rashid_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/rashid_name"
                        android:background="@color/rashid_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/karin_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/karin_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/karin_name"
                        android:background="@color/karin_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/zangief_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/zangief_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/zangief_name"
                        android:background="@color/zangief_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/birdie_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/birdie_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/birdie_name"
                        android:background="@color/birdie_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/laura_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/laura_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/laura_name"
                        android:background="@color/laura_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dhalsim_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/dhalsim_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/dhalsim_name"
                        android:background="@color/dhalsim_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/fang_card"
                style="@style/CharacterCard"
                android:layout_width="0dp"
                app:layout_columnWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/CharacterCardImageStyle"
                        android:src="@drawable/fang_card"/>

                    <TextView
                        style="@style/CharacterCardTextStyle"
                        android:text="@string/fang_name"
                        android:background="@color/fang_accent" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.GridLayout>

</ScrollView>